--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,10 @@
+<!-- 
+Name:Siddharth Mahendrabhai Nahar
+Student ID:000930031
+Date:01-10-2024
+Course:Fall 2024 Web Application Development (CPRG-210-A)
+Assignment 1 : HTML-CSS-JS Daily Assignments
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,9 +20,11 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg">
-            <a href="./index.html"><img class="header-image" src="./images/vintage-adventure-logo.avif"
-                    alt="Travel Bliss"></a>
-            <span class="header-title">Travel Bliss</span>
+            <div class="navbar-image-title">
+                <a class="header-link" href="./index.html"><img class="header-image"
+                        src="./images/vintage-adventure-logo.avif" alt="Travel Bliss"></a>
+                <span class="header-title"><a class="header-link" href="./index.html">Travel Bliss</a></span>
+            </div>
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
@@ -24,16 +33,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                            <a class="nav-link link-navbar" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./register.html">Register</a>
+                            <a class="nav-link link-navbar" href="./register.html">Register</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./contact.html">Contact us</a>
+                            <a class="nav-link link-navbar" href="./contact.html">Contact us</a>
                         </li>
                     </ul>
                 </div>
